--- a/hooks-lab/src/App.css
+++ b/hooks-lab/src/App.css
@@ -32,7 +32,27 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+.input-block {
+  position: relative;
+  padding-top: 1.5rem;
+}
+
+label {
+  position: absolute;
+  top: 0;
+  font-size: var(--font-size-small);
+  opacity: 1;
+  transform: translateY(0);
+  transition: all 0.2s ease-out;
+}
+
+input:placeholder-shown+label {
+  opacity: 0;
+  transform: translateY(1rem);
 }
